...
            }
            Spacer()
            .frame(height: 20)
            pastSearches
        }
        .accessibility(hint: Text("Search Chuck Norris Facts View"))
        .accessibility(identifier: "Search Fact View")
        .navigationBarTitle("")
        .navigationBarHidden(true)
        .onAppear(perform: {
            self.queryType = .none
        })
        .onDisappear(perform: {
...
