...
    var noFacts: some View {
        VStack(alignment: .center) {
            Image("alert")
                .resizable()
                .frame(width: 150, height: 150, alignment: .center)
                .foregroundColor(.white)
            Text("Search and share my facts now!")
            .fontWeight(.bold)
            .font(.system(size: 20))
        }.frame(minWidth: 0, maxWidth: .infinity, minHeight: 0, maxHeight: .infinity, alignment: .center)
    }

    var loading: some View {
...
